@@ -72,8 +72,8 @@ jQuery(document).ready(function() {
     
     if (action_link) {
       var cancel_url = as_cancel.attr('href');
-      var refresh_data = as_cancel.attr('data-refresh');
-      if (refresh_data !== 'true' || !cancel_url) {
+      var refresh_data = action_link.tag.data('cancel-refresh');
+      if (!refresh_data || !cancel_url) {
         action_link.close();
         return false;
       }
@@ -973,7 +973,7 @@ ActiveScaffold.ActionLink.Abstract = Class.extend({
     this.adapter = element;
     this.adapter.addClass('as_adapter');
     this.adapter.data('action_link', this);
-    if (this.refresh_url) jQuery('.as_cancel[data-refresh=true]', this.adapter).attr('href', this.refresh_url);
+    if (this.refresh_url) jQuery('.as_cancel', this.adapter).attr('href', this.refresh_url);
   }
 });
 
